# filter_h5ads

./: README.md  example_cli.sh  example_complete_pipeline.py  example_complete_pipeline_tahoe.py  example_usage.py  pyproject.toml  requirements.txt  test_config.py  xaira_vcc_gene_vocab_overlap.txt
configs/: minimal_qc.json
filter_h5ads/: __init__.py  cli.py  config.py  conversions.py  filters.py  inspection.py  io.py  mask.py  pipeline.py  utils.py
filter_h5ads/filters/: __init__.py  base.py  ensembl_conversion.py  gene_detection.py  group_count_annotate.py  group_count_filter.py  guide_filter.py  mitochondrial.py  obs_column_transform.py  obs_value_filter.py  pseudobulk.py  umi_filter.py
